set02/problem06_compile_errors.txt
Compilation started at 10/31/2023, 12:16:57 PM
Compilation finished at 10/31/2023, 12:16:58 PM
Compilation started at 11/22/2023, 4:04:52 PM
Compilation finished at 11/22/2023, 4:04:53 PM
Compilation started at 11/22/2023, 4:05:43 PM
c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.c: In function 'str_reverse':
c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.c:32:16: error: expected ';' before '}' token
   32 |     a[i*2]='\0'
      |                ^
      |                ;
......
   36 | }
      | ~               
Compilation finished at 11/22/2023, 4:05:43 PM
Compilation started at 11/22/2023, 4:05:49 PM
Compilation finished at 11/22/2023, 4:05:50 PM
Compilation started at 11/22/2023, 4:15:45 PM
c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/11.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot open output file c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation finished at 11/22/2023, 4:15:45 PM
Compilation started at 11/22/2023, 4:15:52 PM
Compilation finished at 11/22/2023, 4:15:53 PM
Compilation started at 11/22/2023, 4:17:11 PM
Compilation finished at 11/22/2023, 4:17:12 PM
Compilation started at 11/22/2023, 4:18:01 PM
Compilation finished at 11/22/2023, 4:18:02 PM
Compilation started at 11/22/2023, 4:18:53 PM
Compilation finished at 11/22/2023, 4:18:54 PM
Compilation started at 11/22/2023, 4:18:57 PM
Compilation finished at 11/22/2023, 4:18:58 PM
Compilation started at 11/22/2023, 4:23:57 PM
Compilation finished at 11/22/2023, 4:23:57 PM
Compilation started at 11/22/2023, 4:25:36 PM
Compilation finished at 11/22/2023, 4:25:37 PM
Compilation started at 11/22/2023, 4:25:55 PM
Compilation finished at 11/22/2023, 4:25:55 PM
Compilation started at 11/22/2023, 4:32:30 PM
Compilation finished at 11/22/2023, 4:32:30 PM
Compilation started at 11/22/2023, 4:32:34 PM
Compilation finished at 11/22/2023, 4:32:35 PM
Compilation started at 11/22/2023, 4:32:39 PM
Compilation finished at 11/22/2023, 4:32:39 PM
Compilation started at 11/22/2023, 4:35:23 PM
Compilation finished at 11/22/2023, 4:35:23 PM
Compilation started at 11/22/2023, 4:35:48 PM
Compilation finished at 11/22/2023, 4:35:49 PM
Compilation started at 11/22/2023, 4:36:04 PM
Compilation finished at 11/22/2023, 4:36:05 PM
Compilation started at 11/22/2023, 4:38:50 PM
Compilation finished at 11/22/2023, 4:38:51 PM
Compilation started at 11/22/2023, 4:40:37 PM
Compilation finished at 11/22/2023, 4:40:37 PM
Compilation started at 11/22/2023, 4:40:54 PM
Compilation finished at 11/22/2023, 4:40:55 PM
Compilation started at 11/22/2023, 4:41:06 PM
Compilation finished at 11/22/2023, 4:41:07 PM
Compilation started at 11/22/2023, 4:41:13 PM
Compilation finished at 11/22/2023, 4:41:14 PM
Compilation started at 11/22/2023, 4:42:05 PM
Compilation finished at 11/22/2023, 4:42:05 PM
Compilation started at 11/22/2023, 4:42:14 PM
Compilation finished at 11/22/2023, 4:42:15 PM
Compilation started at 11/22/2023, 4:42:38 PM
Compilation finished at 11/22/2023, 4:42:39 PM
Compilation started at 11/22/2023, 4:43:24 PM
Compilation finished at 11/22/2023, 4:43:25 PM
Compilation started at 11/22/2023, 4:43:34 PM
Compilation finished at 11/22/2023, 4:43:34 PM
Compilation started at 11/22/2023, 4:57:06 PM
Compilation finished at 11/22/2023, 4:57:07 PM
Compilation started at 11/22/2023, 4:57:51 PM
Compilation finished at 11/22/2023, 4:57:52 PM
Compilation started at 11/22/2023, 4:59:25 PM
Compilation finished at 11/22/2023, 4:59:26 PM
Compilation started at 11/22/2023, 5:00:34 PM
Compilation finished at 11/22/2023, 5:00:35 PM
Compilation started at 11/22/2023, 5:01:01 PM
Compilation finished at 11/22/2023, 5:01:01 PM
Compilation started at 11/22/2023, 5:01:14 PM
Compilation finished at 11/22/2023, 5:01:15 PM
Compilation started at 12/1/2023, 10:10:47 AM
Compilation finished at 12/1/2023, 10:10:48 AM
Compilation started at 12/1/2023, 10:11:31 AM
Compilation finished at 12/1/2023, 10:11:32 AM
Compilation started at 12/1/2023, 10:14:00 AM
Compilation finished at 12/1/2023, 10:14:01 AM
Compilation started at 12/1/2023, 10:15:37 AM
Compilation finished at 12/1/2023, 10:15:38 AM
Compilation started at 12/1/2023, 10:15:42 AM
Compilation finished at 12/1/2023, 10:15:43 AM
Compilation started at 12/1/2023, 10:17:03 AM
Compilation finished at 12/1/2023, 10:17:03 AM
Compilation started at 12/1/2023, 11:32:06 AM
c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.c: In function 'str_reverse':
c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.c:44:26: error: subscripted value is neither array nor pointer nor vector
   44 |                 a[i]=temp[i];
      |                          ^
c:\Users\purab\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Purab-singh\set02\problem06.c:46:28: error: subscripted value is neither array nor pointer nor vector
   46 |                 a[end]=temp[i];
      |                            ^
Compilation finished at 12/1/2023, 11:32:06 AM
Compilation started at 12/1/2023, 11:32:41 AM
Compilation finished at 12/1/2023, 11:32:41 AM
Compilation started at 12/1/2023, 11:32:59 AM
Compilation finished at 12/1/2023, 11:33:00 AM
Compilation started at 12/1/2023, 11:34:05 AM
Compilation finished at 12/1/2023, 11:34:06 AM
Compilation started at 12/1/2023, 11:34:12 AM
Compilation finished at 12/1/2023, 11:34:13 AM
Compilation started at 12/1/2023, 11:34:25 AM
Compilation finished at 12/1/2023, 11:34:26 AM
Compilation started at 12/1/2023, 11:34:34 AM
Compilation finished at 12/1/2023, 11:34:34 AM
Compilation started at 12/1/2023, 11:34:39 AM
Compilation finished at 12/1/2023, 11:34:40 AM
Compilation started at 12/1/2023, 12:10:41 PM
Compilation finished at 12/1/2023, 12:10:41 PM
Compilation started at 12/1/2023, 12:10:45 PM
Compilation finished at 12/1/2023, 12:10:45 PM
Compilation started at 12/1/2023, 12:10:54 PM
Compilation finished at 12/1/2023, 12:10:54 PM
